syntax = "proto3";

service User {
    rpc UserLogin(LoginRequest) returns (Response) {}
    rpc NewUser(RegisterUser) returns (Response) {}
}
message LoginRequest {
    string username = 1;
    string password = 2;
}
message RegisterUser { 
    string username = 1;
    string password = 2;
    string salt = 3;
    string email = 4;
    string guid = 5;
}
message Response {
    string token = 1;
    UserStatusResponse status = 2;
}
message UserByGuid {
    string token = 1;
    UserStatusResponse status = 2;
}

enum UserStatusResponse {
    OK = 0;
    CREDENTIAL_EXIST = 2;
    FAILED = 3;
    SERVER_ERROR = 4;
}